--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">QuotesForDays</string>
+    <string name="main_screen_tv">How many quotes would you like ?</string>
+    <string name="movieButton">From Movies</string>
+    <string name="famousButton">From Someone</string>
 </resources>
