Linked buttons to Main activity, started to implement number picker

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="main_screen_tv">How many quotes would you like ?</string>
     <string name="movieButton">From Movies</string>
     <string name="famousButton">From Someone</string>
+    <string name="tv_stub">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel efficitur enim. Sed ex orci, sollicitudin at rutrum et, luctus eu nisl. Nulla iaculis orci.</string>
 </resources>
