--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="SAVE_MENU_ITEM">Save</string>
+    <string name="SHARE_MENU_ITEM">Share</string>
 
 </resources>
