--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="SAVE_MENU_ITEM">Save</string>
     <string name="SHARE_MENU_ITEM">Share</string>
+    <string name="LIST_MENU_ITEM">List</string>
+    <string name="DELETE_MENU_ITEM">Delete</string>
 
 </resources>
